# defender-monitor-win

./: Cargo.toml  README.md  resources.rc
.github/workflows/: release.yml
src/: main.rs
