[package]
name = "defender-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-item = "0.10.0"
windows = { version = "0.48", features = [
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Wmi",
    "Win32_Foundation",
] }
wmi = "0.13"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
winreg = "0.50"

[build-dependencies]
embed-resource = "2.3"